--- a/flavors/python-3.6-data-science-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.6-data-science-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -500,3 +500,5 @@ CVE-2021-29514
 CVE-2021-29607
 CVE-2021-45958
 CVE-2021-43816
+#issue in cgroups, but no threat for ScriptLanguageContainer
+CVE-2022-0492
