--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -4,3 +4,5 @@ CVE-2021-43816
 CVE-2022-0847
 CVE-2022-0001
 CVE-2022-0002
+#issue in cgroups, but no threat for ScriptLanguageContainer
+CVE-2022-0492
