--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -6,3 +6,5 @@ CVE-2022-0001
 CVE-2022-0002
 CVE-2022-23960
 CVE-2022-25636
+#issue in cgroups, but no threat for ScriptLanguageContainer
+CVE-2022-0492
