--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -4,3 +4,5 @@ CVE-2021-43816
 CVE-2022-0847
 CVE-2022-0778
 CVE-2022-1015
+#CVE-2022-23648 is a bug in containerd, not issue for containers
+CVE-2022-23648
