--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -5,5 +5,7 @@ CVE-2022-0847
 CVE-2022-0001
 CVE-2022-0002
 CVE-2022-1015
+#CVE-2022-23648 is a bug in containerd, not issue for containers
+CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
 CVE-2022-0492
