--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -1,12 +1,13 @@
 #bug in trivy, no idea when a new debian package will be released (https://github.com/aquasecurity/trivy/issues/1680)
 CVE-2021-43816
-#CVE-2022-0847, CVE-2022-0001, CVE-2022-0002, CVE-2022-1015 affect kernel, no issue for container
+#the following CVE's affect kernel, no issue for container
 CVE-2022-0847
 CVE-2022-0001
 CVE-2022-0002
 CVE-2022-1015
 CVE-2022-23960
 CVE-2022-25636
+CVE-2022-1116
 #CVE-2022-23648 is a bug in containerd, not issue for containers
 CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
