--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -12,6 +12,8 @@ CVE-2022-43945
 CVE-2023-3090
 CVE-2023-3389
 CVE-2023-3390 
+CVE-2023-3611
+CVE-2023-3776
 #CVE-2022-23648 is a bug in containerd, not issue for containers
 CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
