--- a/flavors/template-Exasol-all-python-3.8-cuda-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-all-python-3.8-cuda-conda/flavor_base/security_scan/.trivyignore
@@ -8,6 +8,8 @@ CVE-2022-1015
 CVE-2022-23960
 CVE-2022-25636
 CVE-2022-43945
+CVE-2023-3611
+CVE-2023-3776
 #CVE-2022-23648 is a bug in containerd, not issue for containers
 CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
