--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_base/security_scan/.trivyignore
@@ -19,3 +19,5 @@ CVE-2022-0492
 CVE-2022-27191
 # CVE-2022-23960 affects only ARM architectures
 CVE-2022-23960
+# We ignore CVE-2023-38325, because cryptography 41.0.3 is currently on available on conda, https://github.com/conda-forge/cryptography-feedstock/issues/122
+CVE-2023-38325
