--- a/flavors/template-Exasol-all-python-3.8-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-all-python-3.8-conda/flavor_base/security_scan/.trivyignore
@@ -1,6 +1,6 @@
 #bug in trivy, no idea when a new debian package will be released (https://github.com/aquasecurity/trivy/issues/1680)
 CVE-2021-43816
-#CVE-2022-0847, CVE-2022-0001, CVE-2022-0002, CVE-2022-1015 affect kernel, no issue for container
+#The following CVEs affect kernel, no issue for container
 CVE-2022-0847
 CVE-2022-0001
 CVE-2022-0002
@@ -8,6 +8,9 @@ CVE-2022-1015
 CVE-2022-23960
 CVE-2022-25636
 CVE-2022-43945
+CVE-2023-3611
+CVE-2023-3776
+CVE-2023-3609
 #CVE-2022-23648 is a bug in containerd, not issue for containers
 CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
@@ -16,3 +19,5 @@ CVE-2022-0492
 CVE-2022-27191
 # CVE-2022-23960 affects only ARM architectures
 CVE-2022-23960
+# We ignore CVE-2023-38325, because cryptography 41.0.3 is currently not available on conda, https://github.com/conda-forge/cryptography-feedstock/issues/122
+CVE-2023-38325
