--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -15,6 +15,11 @@ CVE-2023-3390
 CVE-2023-3611
 CVE-2023-3776
 CVE-2023-3609
+CVE-2023-4622
+CVE-2023-4623
+CVE-2023-4921
+# CVE-2023-20569 does not have a fix and is a problem of host system (amd cpus)
+CVE-2023-20569 
 #CVE-2022-23648 is a bug in containerd, not issue for containers
 CVE-2022-23648
 #issue in cgroups, but no threat for ScriptLanguageContainer
