--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -21,6 +21,9 @@ CVE-2023-4921
 CVE-2023-4244
 CVE-2024-1086
 CVE-2024-26597
+CVE-2024-26583
+CVE-2024-26828
+CVE-2024-26865
 # CVE-2023-20569 does not have a fix and is a problem of host system (amd cpus)
 CVE-2023-20569 
 #CVE-2022-23648 is a bug in containerd, not issue for containers
