--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
@@ -1,1 +1,2 @@
 CVE-2025-47273 #See https://github.com/exasol/script-languages-release/issues/1145
+CVE-2025-47907 #This affects nsight-compute version 2025.2.1. Ignoring for now
