#1253/#1254: Suppressed CVE-2025-47906 in Cuda flavors and package updates

--- a/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/security_scan/.trivyignore
+++ b/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/security_scan/.trivyignore
@@ -1,1 +1,2 @@
 CVE-2025-47907 #This affects nsight-compute version 2025.2.1. Ignoring for now
+CVE-2025-47906 #This affects nsight-compute version 2025.2.1. Ignoring for now
