--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
@@ -1,1 +1,2 @@
 CVE-2025-47907 #This affects nsight-compute version 2025.2.1. Ignoring for now
+CVE-2025-47906 #This affects nsight-compute version 2025.2.1. Ignoring for now
