--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/security_scan/.trivyignore
@@ -1,2 +1,3 @@
 CVE-2025-47907 #This affects nsight-compute version 2025.2.1. Ignoring for now
 CVE-2025-47906 #This affects nsight-compute version 2025.2.1. Ignoring for now
+CVE-2020-11979 #Caused by cuda-nvvp 12.9.79 which is already latest version. Can be removed when updating CUDA Version. Ignoring for now.
